--- a/src/components/kanban/KanbanCard.css
+++ b/src/components/kanban/KanbanCard.css
@@ -1,9 +1,8 @@
 .fdb-kanban-card {
 	width: 400px;
-	height: 200px;
-	overflow-y: scroll;
 
-	margin-bottom: var(--size-4-1);
+	margin-bottom: var(--size-4-2);
+	padding-bottom: var(--size-4-2);
 
 	border-radius: var(--radius-s);
 	background-color: var(--background-secondary);
