--- a/src/components/kanban/KanbanColumn.css
+++ b/src/components/kanban/KanbanColumn.css
@@ -1,7 +1,21 @@
+.fdb-kanban-column {
+	padding: var(--size-4-1);
+	padding-top: 0;
+
+	border-radius: var(--radius-s);
+
+	&.is-dragged-over {
+		background-color: var(--background-modifier-hover);
+	}
+}
+
 .fdb-kanban-column-contents {
 	display: flex;
 	flex-direction: column;
 	align-items: start;
+
+	/* Ensure there's always some space to drop items onto */
+	min-height: 300px;
 
 	gap: var(--size-4-2);
 }
